Lots of minor optimizations: perf, installation, db commit fault tolerance, 'TabStripCreated' event refactoring & other stuff

--- a/src/Plugins/Payments.Invoice/Localization/resources.de-de.xml
+++ b/src/Plugins/Payments.Invoice/Localization/resources.de-de.xml
@@ -19,7 +19,7 @@
     <Value>Zusätzliche Gebühr</Value>
   </LocaleResource>
   <LocaleResource Name="AdditionalFee.Hint">
-    <Value>Bestimmt die Gebühr die dem Kunden für die Nutzung dieser Zahlart berechnet wird.</Value>
+    <Value>Bestimmt die Gebühr, die dem Kunden für die Nutzung dieser Zahlart berechnet wird.</Value>
   </LocaleResource>
 	<LocaleResource Name="AdditionalFeePercentage">
 		<Value>Zusätzliche Gebühren (prozentual)</Value>
