--- a/src/Presentation/SmartStore.Web/App_Data/Localization/App/en/all.smres.xml
+++ b/src/Presentation/SmartStore.Web/App_Data/Localization/App/en/all.smres.xml
@@ -6302,7 +6302,7 @@
 		<Value>The settings have been updated successfully.</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.ContentManagement">
-		<Value>Content Management</Value>
+		<Value>CMS</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.ContentManagement.Blog">
 		<Value>Blog</Value>
