#125 Widget Trusted Shops Customer Reviews can not be configured + Info pages for all Trusted Shops Widgets

--- a/src/Plugins/Widgets.TrustedShopsCustomerProtection/Localization/resources.en-us.xml
+++ b/src/Plugins/Widgets.TrustedShopsCustomerProtection/Localization/resources.en-us.xml
@@ -1,6 +1,44 @@
 ﻿<Language Name="English" IsDefault="false" IsRightToLeft="false">
   <LocaleResource Name="Plugins.FriendlyName.Widgets.TrustedShopsCustomerProtection" AppendRootKey="false">
-    <Value>Trusted Shops Seal</Value>
+    <Value>Trusted Shops Buyer Protection</Value>
+  </LocaleResource>
+  <LocaleResource Name="Introduction.Headline">
+    <Value>
+      <![CDATA[
+            Trusted Shops is the well-known internet Seal of Approval for online shops which also offers
+            customers a Buyer Protection. During the audit, your online shop is subjected to extensive and
+            thorough tests. This audit, consisting of over 100 individual criteria, is based on the requirements of
+            consumer protection, national and European legislation.
+      ]]>
+    </Value>
+  </LocaleResource>
+  <LocaleResource Name="Introduction.Body">
+    <Value>
+      <![CDATA[
+        <div style="margin-left:250px; width:600px">
+          
+          <h4>More trust leads to more sales!</h4>
+          <p>
+            The Trusted Shops Seal of Approval is the optimal way to increase the trust of your online customers.
+            Trust increases customers' willingness to buy from you.
+          </p>
+
+          <h4>Less abandoned purchases</h4>
+          <p>
+            Give your online customers a strong reason to buy proposing the Trusted Shops Buyer Protection.
+            This additional security leads to less shopping basket abandonment.
+          </p>
+
+          <h4>Your Customers become Sellers</h4>
+          <p>
+            Use our retailer evaluation with integrated customer opinions as an important marketing tool to
+            increase the trust of your customers. Display your positive evaluation at Google Shopping and
+            increase your traffic.
+          </p>
+          <a href="#" class="btn btn-info">Apply now!</a>
+        </div>
+      ]]>
+    </Value>
   </LocaleResource>
   <LocaleResource Name="AdminInstruction">
     <Value>
@@ -79,5 +117,13 @@
   <LocaleResource Name="ButtonText">
     <Value>Register for Trusted Shops Buyer Protection</Value>
   </LocaleResource>
-  
+  <LocaleResource Name="Image.Logo">
+    <Value>~/Plugins/Widgets.TrustedShopsCustomerProtection/Content/images/logo_en.jpg</Value>
+  </LocaleResource>
+  <LocaleResource Name="Image.Seal">
+    <Value>~/Plugins/Widgets.TrustedShopsCustomerProtection/Content/images/seal_rating_en.jpg</Value>
+  </LocaleResource>
+  <LocaleResource Name="Prepared">
+    <Value>SmartStore.NET is already well prepared for certification!</Value>
+  </LocaleResource>
 </Language>
