--- a/src/Plugins/Widgets.TrustedShopsCustomerProtection/Localization/resources.de-de.xml
+++ b/src/Plugins/Widgets.TrustedShopsCustomerProtection/Localization/resources.de-de.xml
@@ -1,6 +1,41 @@
 ﻿<Language Name="Deutsch" IsDefault="true" IsRightToLeft="false">
-  <LocaleResource Name="Plugins.FriendlyName.Widgets.TrustedShopsCustomerProtection" AppendRootKey="false">
+  <LocaleResource Name="Plugins.FriendlyName.Widgets.TrustedShopsBuyerProtection" AppendRootKey="false">
     <Value>Trusted Shops Käuferschutz</Value>
+  </LocaleResource>
+  <LocaleResource Name="Introduction.Headline">
+    <Value>
+      <![CDATA[
+            Trusted Shops ist das bekannte Internet-Gütesiegel für Online-Shops mit Käuferschutz für Ihre Kunden. Bei einer Zertifizierung wird Ihr Shop 
+            umfassenden Tests unterzogen. Diese Prüfung mit mehr als 70 Einzelkriterien orientiert sich an den Forderungen von Verbraucherschützern sowie 
+            dem nationalen und europäischen Recht.
+      ]]>
+    </Value>
+  </LocaleResource>
+  <LocaleResource Name="Introduction.Body">
+    <Value>
+      <![CDATA[
+          <div style="margin-left:250px; width:600px">
+            <h4>Mehr Umsatz durch mehr Vertrauen!</h4>
+            <p>
+              Das Trusted Shops Gütesiegel ist optimal, um das Vertrauen Ihrer Online-Kunden zu steigern.
+              Vertrauen erhöht die Bereitschaft Ihrer Kunden, bei Ihnen einzukaufen.
+            </p>
+            <h4>Weniger Kaufabbrüche</h4>
+            <p>
+              Sie bieten Ihren Online-Kunden ein starkes Argument: den Trusted Shops Käuferschutz. Durch diese
+              zusätzliche Sicherheit werden weniger Einkäufe abgebrochen.
+            </p>
+
+            <h4>Ihre Kunden werden zu Verkäufern</h4>
+            <p>
+              Nutzen Sie unsere Kundenbewertungen als wichtiges Marketing-Tool, um das Vertrauen Ihrer Kunden
+              zu steigern. Lassen Sie Ihre gute Bewertung bei Google Shopping anzeigen und erhöhen Sie Ihren Traffic.
+            </p>
+            
+            <a href="http://www.trustedshops.de/" class="btn btn-info">Informieren und anmelden!</a>
+          </div>
+      ]]>
+    </Value>
   </LocaleResource>
   <LocaleResource Name="AdminInstruction">
     <Value>
@@ -185,4 +220,13 @@
     <Value>Dauer der Garantie {0} Tage. Höhe der der Garantiesumme {1}</Value>
   </LocaleResource>
   
+  <LocaleResource Name="Image.Logo">
+    <Value>~/Plugins/Widgets.TrustedShopsCustomerProtection/Content/images/logo_de.jpg</Value>
+  </LocaleResource>
+  <LocaleResource Name="Image.Seal">
+    <Value>~/Plugins/Widgets.TrustedShopsCustomerProtection/Content/images/seal_rating_de.jpg</Value>
+  </LocaleResource>
+  <LocaleResource Name="Prepared">
+    <Value>SmartStore.NET ist bereits optimal für die Zertifizierung vorbereitet!</Value>
+  </LocaleResource>
 </Language>
